@@ -26,6 +26,7 @@ use base qw(Net::DBus::Object);
 use Net::DBus::Exporter ($Utils::Backend::DBUS_PREFIX);
 use Utils::Backend;
 use Users::Groups;
+use Users::Users;
 
 my $OBJECT_NAME = "GroupsConfig";
 my $OBJECT_PATH = "$Utils::Backend::DBUS_PATH/$OBJECT_NAME";
@@ -43,17 +44,19 @@ sub new
   return $self;
 }
 
-dbus_method ("get", [], [[ "array", [ "struct", "string", "string", "int32", [ "array", "string"]]]]);
-dbus_method ("set", [[ "array", [ "struct", "string", "string", "int32", [ "array", "string"]]]], []);
+dbus_method ("get", [], [[ "array", [ "struct", "string", "string", "int32", [ "array", "string" ]]], "int32", "int32" ]);
+dbus_method ("set", [[ "array", [ "struct", "string", "string", "int32", [ "array", "string" ]]], "int32", "int32" ], []);
 dbus_signal ("changed", []);
 
 sub get
 {
   my ($self) = @_;
-  my $groups;
+  my $groups, $logindefs;
 
   $groups = Users::Groups::get ();
-  return $groups;
+  $logindefs = &Users::Users::get_logindefs ();
+
+  return ($groups, $$logindefs{"gmin"}, $$logindefs{"gmax"});
 }
 
 sub set
