@@ -1,3 +1,11 @@
+2006-03-17  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* GroupsConfig.pm: add maximum and minimum GID
+	* UsersConfig.pm: add default shell
+	* Time/TimeDate.pm: fixed a couple of typos
+	* Users/Users.pm: put default home_prefix to the home dirname (i.e.:
+	/home/)
+
 2005-12-12  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* org.freedesktop.SystemToolsBackends.service.in, Init/Makefile.am,
